<resources>
    <string name="app_name">Inmobiliaria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Juan Ignacio Balaguer</string>
    <string name="nav_header_subtitle">balaguerjuani@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Perfil">Perfil</string>
    <string name="Inmuebles">Inmuebles</string>
    <string name="Inquilinos">Inquilinos</string>
    <string name="Contratos">Contratos</string>
    <string name="Pagos">Pagos</string>
    <string name="Logout">Log out</string>
    <string name="Cerrar_sesión">Cerrar sesión</string>
    <string name="Pago">Pago</string>
    <string name="Contrato">Contrato</string>
    <string name="Inmueble">Inmueble</string>
    <string name="Inquilio">Inquilino</string>
</resources>